<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="InputPositionProtection" Id="{d08ef58f-fced-4486-b224-0df6caf71e1d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM InputPositionProtection
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(************Input Position Protection****************)
IF Axis1_TargetPosition_retain>=Axis1_minPosition AND Axis1_TargetPosition_retain<=Axis1_maxPosition THEN
	Axis1_InputPositionOutOfRange:=FALSE;
ELSE
	Axis1_InputPositionOutOfRange:=TRUE;
END_IF
IF Axis2_TargetPosition_retain>=Axis2_minPosition AND Axis2_TargetPosition_retain<=Axis2_maxPosition THEN
	Axis2_InputPositionOutOfRange:=FALSE;
ELSE
	Axis2_InputPositionOutOfRange:=TRUE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="InputPositionProtection">
      <LineId Id="6" Count="9" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>