<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="modbus" Id="{15ca4977-0e75-43df-9779-165aec8ec23c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM modbus
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[MOD_B_Local_led              :=Local_led;
MOD_B_Remote_led             :=Remote_led;
MOD_B_E_STOP_led             :=E_STOP_led;
MOD_B_Axis1_error            :=Axis1_error;
MOD_B_Axis2_error            :=Axis2_error;
MOD_B_Axis1_running          :=Axis1_running;
MOD_B_Axis2_running          :=Axis2_running;
MOD_B_Axis1_Position_done    :=Axis1_Position_done;
MOD_B_Axis2_Position_done    :=Axis2_Position_done;
MOD_B_foreward_limit_axis1 	 :=foreward_limit_axis1;
MOD_B_backward_limit_axis1   :=backward_limit_axis1;
MOD_B_foreward_limit_axis2   :=foreward_limit_axis2;
MOD_B_backward_limit_axis2   :=backward_limit_axis2;
MOB_R_Axis1_Currentvelocity  :=Axis1_Currentvelocity;
MOB_R_Axis2_Currentvelocity  :=Axis2_Currentvelocity;
MOB_R_Axis1_CurrentPosition  :=Axis1_CurrentPosition_retain;
MOB_R_Axis2_CurrentPosition  :=Axis2_CurrentPosition_retain;
MOB_R_TempController1_PV     :=TempController1_PV;
MOB_R_TempController2_PV     :=TempController2_PV;
MOB_R_LVDT1_PV               :=LVDT1_PV;
MOB_R_LVDT2_PV               :=LVDT2_PV;


IF  MOD_B_Remote_led  THEN    
	
	Axis1_PositiveJog            :=MOD_B_Axis1_PositiveJog;
	Axis1_NegativeJog            :=MOD_B_Axis1_NegativeJog;    
	Axis1_Positionstart          :=MOD_B_Axis1_Positionstart; 
	Axis1_STOP                   :=MOD_B_Axis1_STOP;
	Axis2_PositiveJog            :=MOD_B_Axis2_PositiveJog;
	Axis2_NegativeJog            :=MOD_B_Axis2_NegativeJog;    
	Axis2_Positionstart          :=MOD_B_Axis2_Positionstart; 
	Axis2_STOP                   :=MOD_B_Axis2_STOP;
	MC_Reset1_Execute            :=MOD_B_MC_Reset1_Execute;
	MC_Reset2_Execute            :=MOD_B_MC_Reset2_Execute;
	Axis1_TargetPosition_retain  :=MOB_R_Axis1_SetPosition;
	Axis2_TargetPosition_retain  :=MOB_R_Axis2_SetPosition;
	Axis1_Setvelocity            :=MOB_R_Axis1_Setvelocity;
	Axis2_Setvelocity            :=MOB_R_Axis2_Setvelocity;
	Axis_All_PositiveJog         :=MOD_B_Axis_All_PositiveJog;
	Axis_All_NegativeJog         :=MOD_B_Axis_All_NegativeJog;    
	Axis_All_Positionstart       :=MOD_B_Axis_All_Positionstart; 
	Axis_All_STOP                :=MOD_B_Axis_All_STOP;
	Axis1_JogPosition_retain	 :=MOB_R_Axis1_JogPosition;
	Axis2_JogPosition_retain	 :=MOB_R_Axis2_JogPosition;

ELSE
	MOD_B_Axis1_PositiveJog       := Axis1_PositiveJog;	
	MOD_B_Axis1_NegativeJog       := Axis1_NegativeJog;
	MOD_B_Axis1_Positionstart     := Axis1_Positionstart;
	MOD_B_Axis1_STOP              := Axis1_STOP;
	MOD_B_Axis2_PositiveJog       := Axis2_PositiveJog;	
	MOD_B_Axis2_NegativeJog       := Axis2_NegativeJog;
	MOD_B_Axis2_Positionstart     := Axis2_Positionstart;
	MOD_B_Axis2_STOP              := Axis2_STOP;
	MOD_B_MC_Reset1_Execute       :=MC_Reset1_Execute;
	MOD_B_MC_Reset2_Execute       :=MC_Reset2_Execute;
	MOB_R_Axis1_SetPosition       :=Axis1_TargetPosition_retain;
	MOB_R_Axis2_SetPosition       :=Axis2_TargetPosition_retain;
	MOB_R_Axis1_Setvelocity       :=Axis1_Setvelocity;
	MOB_R_Axis2_Setvelocity       :=Axis2_Setvelocity;
	MOD_B_Axis_All_PositiveJog    := Axis_All_PositiveJog;	
	MOD_B_Axis_All_NegativeJog    := Axis_All_NegativeJog;
	MOD_B_Axis_All_Positionstart  := Axis_All_Positionstart;
	MOD_B_Axis_All_STOP           := Axis_All_STOP;
	MOB_R_Axis1_JogPosition		:=Axis1_JogPosition_retain;
	MOB_R_Axis2_JogPosition		:=Axis2_JogPosition_retain;
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="modbus">
      <LineId Id="6" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="15" Count="2" />
      <LineId Id="14" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="81" Count="4" />
      <LineId Id="23" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="35" Count="2" />
      <LineId Id="43" Count="3" />
      <LineId Id="29" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="30" Count="2" />
      <LineId Id="51" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="90" Count="2" />
      <LineId Id="89" Count="0" />
      <LineId Id="97" Count="1" />
      <LineId Id="53" Count="0" />
      <LineId Id="56" Count="3" />
      <LineId Id="65" Count="3" />
      <LineId Id="54" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="73" Count="1" />
      <LineId Id="76" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="94" Count="2" />
      <LineId Id="93" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="22" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>